--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -17,7 +17,7 @@
                 <ul class="header__nav-list list-reset d-flex align-items-center">
                     <li class="header__nav-item">
                         <div class="dropdown header__dropdown">
-                            <button class="btn descr1 header__dropdown_btn p-0 border-0" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            <button class="btn-reset descr1 header__dropdown_btn p-0 border-0" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                                 <span class="header__dropdown_btn-text">
                                     О компании
                                 </span>
@@ -58,7 +58,7 @@
                     </li>
                     <li class="header__nav-item">
                         <div class="dropdown header__dropdown">
-                            <button class="btn header__dropdown_btn p-0 border-0" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            <button class="btn-reset header__dropdown_btn p-0 border-0" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                                 <span class="descr1 header__dropdown_btn-text">
                                     Решения
                                 </span>
