--- a/src/partials/main/hero.html
+++ b/src/partials/main/hero.html
@@ -43,13 +43,15 @@
             <div class="hero__description">
               <div class="container-fluid hero__left-container">
                 <div class="hero__left-content">
-                  <h1 class="text-h1 hero__title">
-                    НТП «КРИПТОСОФТ»
-                  </h1>
-                  <p class="descr2 descr-2-1 hero__descr">
-                    Ведущее предприятие России в сфере информационной безопасности, разработчик аппаратных
-                    и программных средств защиты информации
-                  </p>
+                  <div class="hero__left-top">
+                    <h1 class="text-h1 hero__title">
+                      НТП «КРИПТОСОФТ»
+                    </h1>
+                    <p class="descr2 descr-2-1 hero__descr">
+                      Ведущее предприятие России в сфере информационной безопасности, разработчик аппаратных
+                      и программных средств защиты информации
+                    </p>
+                  </div>
                   <a class="btn-reset hero__more">
                     подробнее
                   </a>
@@ -69,13 +71,15 @@
             <div class="hero__description">
               <div class="container-fluid hero__left-container">
                 <div class="hero__left-content">
-                  <h1 class="text-h1 hero__title">
-                    НТП «КРИПТОСОФТ»
-                  </h1>
-                  <p class="descr2 descr-2-1 hero__descr">
-                    Ведущее предприятие России в сфере информационной безопасности, разработчик аппаратных
-                    и программных средств защиты информации
-                  </p>
+                  <div class="hero__left-top">
+                    <h1 class="text-h1 hero__title">
+                      НТП «КРИПТОСОФТ»
+                    </h1>
+                    <p class="descr2 descr-2-1 hero__descr">
+                      Ведущее предприятие России в сфере информационной безопасности, разработчик аппаратных
+                      и программных средств защиты информации
+                    </p>
+                  </div>
                   <a class="btn-reset hero__more">
                     подробнее
                   </a>
@@ -104,6 +108,33 @@
         <div class="hero__right-wrapper swiper-wrapper">
           <div class="hero__right-slide swiper-slide">
             <div class="hero__img">
+              <div class="hero__img-dark-blue hero__img-dark"></div>
+              <picture>
+                <source media="(max-width: 450px)" srcset="./img/hero375.png" >
+                <source media="(max-width: 991px)" srcset="./img/hero768.png" >
+                <img src="./img/hero.png"/>
+              </picture>
+            </div>
+            <div class="hero__description hero__right-description">
+              <div class="container-fluid hero__right-container">
+                <div class="hero__right-content">
+                  <div class="hero__right-top">
+                    <h2 class="text-h12 hero__title-right">
+                      10-АЯ КОНФЕРЕНЦИЯ «OS DAY»
+                    </h2>
+                    <p class="descr2 descr-2-1 hero__descr hero__descr-right">
+                      Ведущее предприятие России в сфере информационной безопасности, разработчик
+                    </p>
+                  </div>
+                  <a class="btn-reset hero__more">
+                    подробнее
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="hero__right-slide swiper-slide">
+            <div class="hero__img">
               <div class="hero__img-dark"></div>
               <picture>
                 <source media="(max-width: 450px)" srcset="./img/hero375.png" >
@@ -113,13 +144,15 @@
             </div>
             <div class="hero__description hero__right-description">
               <div class="container-fluid hero__right-container">
-                <div class="hero__left-content">
-                  <h1 class="text-h12 hero__title-right">
-                    10-АЯ КОНФЕРЕНЦИЯ «OS DAY»
-                  </h1>
-                  <p class="descr2 descr-2-1 hero__descr hero__descr-right">
-                    Ведущее предприятие России в сфере информационной безопасности, разработчик ...
-                  </p>
+                <div class="hero__right-content">
+                  <div class="hero__right-top">
+                    <h2 class="text-h12 hero__title-right">
+                      10-АЯ КОНФЕРЕНЦИЯ «OS DAY»
+                    </h2>
+                    <p class="descr2 descr-2-1 hero__descr hero__descr-right">
+                      Ведущее предприятие России в сфере информационной безопасности, разработчик
+                    </p>
+                  </div>
                   <a class="btn-reset hero__more">
                     подробнее
                   </a>
@@ -136,16 +169,17 @@
                 <img src="./img/hero.png"/>
               </picture>
             </div>
-            <div class="hero__description">
+            <div class="hero__description hero__right-description">
               <div class="container-fluid hero__right-container">
-                <div class="hero__left-content">
-                  <h1 class="text-h1 hero__title">
-                    НТП «КРИПТОСОФТ»
-                  </h1>
-                  <p class="descr2 descr-2-1 hero__descr">
-                    Ведущее предприятие России в сфере информационной безопасности, разработчик аппаратных
-                    и программных средств защиты информации
-                  </p>
+                <div class="hero__right-content">
+                  <div class="hero__right-top">
+                    <h2 class="text-h12 hero__title-right">
+                      10-АЯ КОНФЕРЕНЦИЯ «OS DAY»
+                    </h2>
+                    <p class="descr2 descr-2-1 hero__descr hero__descr-right">
+                      Ведущее предприятие России в сфере информационной безопасности, разработчик
+                    </p>
+                  </div>
                   <a class="btn-reset hero__more">
                     подробнее
                   </a>
@@ -162,42 +196,17 @@
                 <img src="./img/hero.png"/>
               </picture>
             </div>
-            <div class="hero__description">
+            <div class="hero__description hero__right-description">
               <div class="container-fluid hero__right-container">
-                <div class="hero__left-content">
-                  <h1 class="text-h1 hero__title">
-                    НТП «КРИПТОСОФТ»
-                  </h1>
-                  <p class="descr2 descr-2-1 hero__descr">
-                    Ведущее предприятие России в сфере информационной безопасности, разработчик аппаратных
-                    и программных средств защиты информации
-                  </p>
-                  <a class="btn-reset hero__more">
-                    подробнее
-                  </a>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="hero__right-slide swiper-slide">
-            <div class="hero__img">
-              <div class="hero__img-dark"></div>
-              <picture>
-                <source media="(max-width: 450px)" srcset="./img/hero375.png" >
-                <source media="(max-width: 991px)" srcset="./img/hero768.png" >
-                <img src="./img/hero.png"/>
-              </picture>
-            </div>
-            <div class="hero__description">
-              <div class="container-fluid hero__right-container">
-                <div class="hero__left-content">
-                  <h1 class="text-h1 hero__title">
-                    НТП «КРИПТОСОФТ»
-                  </h1>
-                  <p class="descr2 descr-2-1 hero__descr">
-                    Ведущее предприятие России в сфере информационной безопасности, разработчик аппаратных
-                    и программных средств защиты информации
-                  </p>
+                <div class="hero__right-content">
+                  <div class="hero__right-top">
+                    <h2 class="text-h12 hero__title-right">
+                      10-АЯ КОНФЕРЕНЦИЯ «OS DAY»
+                    </h2>
+                    <p class="descr2 descr-2-1 hero__descr hero__descr-right">
+                      Ведущее предприятие России в сфере информационной безопасности, разработчик
+                    </p>
+                  </div>
                   <a class="btn-reset hero__more">
                     подробнее
                   </a>
