--- a/src/partials/main/news.html
+++ b/src/partials/main/news.html
@@ -17,13 +17,13 @@
             </div>
             <div class="main-news__item-right d-flex flex-column justify-content-between">
               <div class="main-news__item-top d-flex flex-column">
-              <span class="main-news__item-date text-button">
+              <span class="main-news__item-date">
                 25.11.2020
               </span>
                 <h3 class="text-h9 main-news__item-title">
                   Второй Всероссийский форум «Доверенные квантовые технологии и коммуникации. КВАНТ 2024»
                 </h3>
-                <p class="descr8 main-news__item-text">
+                <p class="main-news__item-text">
                   Научно-техническое предприятие «Криптософт» приняло участие
                   во втором Всероссийском форуме...
                 </p>
@@ -43,13 +43,13 @@
             </div>
             <div class="main-news__item-right d-flex flex-column justify-content-between">
               <div class="main-news__item-top d-flex flex-column">
-              <span class="main-news__item-date text-button">
+              <span class="main-news__item-date">
                 25.11.2020
               </span>
                 <h3 class="main-news__item-title text-h9">
                   10-я конференция «OS DAY. Экосистема российских ОС» jkdashfjksdhf askjdfh ajksdf aadsjkfhasdjkfh adsfasdkjfh ajksdfhajks dfasd f kjsdhfjksdf asdjkfhasdjkfh aasdfasdfasdfjkasdhfkjasdf asdjkfahsdjkfhas dkjfhasdkf asdasdfsdf sdfadsfasdf asdfasdf asdfasdf asdf asdf asdf asdfsadfsadf asdfas dfd
                 </h3>
-                <p class="descr8 main-news__item-text">
+                <p class="main-news__item-text">
                   Научно-техническое предприятие «Криптософт» приняло участие
                   во втором Всероссийском форуме...adksfhkjasdfhkjas ajksdfhaksjdfh asdfasdf asdjkfas adsf asd
                 </p>
