--- a/src/scss/components/main/customers.scss
+++ b/src/scss/components/main/customers.scss
@@ -26,7 +26,7 @@
     &-img {
       border-radius: 4px;
       height: 139px;
-      border: .5px solid var(--black);
+      border: .5px solid var(--gray-secondary);
       padding: var(--gap-20);
       box-sizing: border-box;
       margin-bottom: var(--gap-12);
