--- a/src/scss/components/main/news.scss
+++ b/src/scss/components/main/news.scss
@@ -39,6 +39,8 @@
     }
 
     &-date {
+      font-size: var(--text-size-14);
+      line-height: var(--text-height-135);
       margin-bottom: 16px;
       color: var(--black-transporent-50);
     }
@@ -53,6 +55,8 @@
     }
 
     &-text {
+      font-size: var(--text-size-14);
+      line-height: var(--text-height-145);
       opacity: 70%;
       overflow: hidden;
       margin-bottom: 10px;
@@ -63,7 +67,6 @@
 
     &-more {
       @include btnMore;
-
       &-wrap {
         display: flex;
       }
@@ -101,6 +104,7 @@
 
     &__item {
       &-date {
+        font-size: var(--text-size-12);
         margin-bottom: var(--gap-12);
       }
 
@@ -109,7 +113,14 @@
       }
 
       &-text {
+        font-size: 11px;
         margin-bottom: 21px;
+      }
+
+      &-more {
+        span {
+          font-size: var(--text-size-10);
+        }
       }
     }
   }
