--- a/src/scss/components/footer.scss
+++ b/src/scss/components/footer.scss
@@ -298,7 +298,12 @@
     &__moose.active-mobile {
       display: inline-block;
     }
+
+    &__copyright {
+      font-size: 1.1rem;
+    }
   }
+
 }
 
 .ymaps-2-1-79-map ymaps {
