--- a/src/scss/components/header.scss
+++ b/src/scss/components/header.scss
@@ -51,6 +51,7 @@
       &-link {
         font-family: var(--text-sofia);
         font-size: var(--text-size-14);
+        color: var(--black);
         line-height: var(--text-height-135);
         font-weight: 400;
         width: 227px;
