--- a/src/scss/components/header.scss
+++ b/src/scss/components/header.scss
@@ -56,7 +56,7 @@
         font-weight: 400;
         width: 227px;
         padding: 0;
-        white-space: wrap;
+        white-space: initial;
         transition: color .3s ease-in-out;
 
         &:hover {
