--- a/src/partials/qp/qp.html
+++ b/src/partials/qp/qp.html
@@ -38,7 +38,7 @@
                 </defs>
                 </svg>
             </span>
-            <h2 class="qp__left-title-text text-h1 text-uppercase">
+            <h2 class="qp__left-title-text text-h2 text-uppercase">
               доверенная операционная система QP OC
             </h2>
           </div>
@@ -108,7 +108,7 @@
               <ul class="list-reset">
                 <li>
                   <span>
-                    <svg width="5" height="7" viewBox="0 0 5 7" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <svg width="6" height="9" viewBox="0 0 5 7" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <path d="M4.40039 3.5L0.35039 0.901924V6.09808L4.40039 3.5Z" fill="#45ADC7"/>
                       </svg>
                   </span>
@@ -116,7 +116,7 @@
                 </li>
                 <li>
                   <span>
-                    <svg width="5" height="7" viewBox="0 0 5 7" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <svg width="6" height="9" viewBox="0 0 5 7" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <path d="M4.40039 3.5L0.35039 0.901924V6.09808L4.40039 3.5Z" fill="#45ADC7"/>
                       </svg>
                   </span>
@@ -124,7 +124,7 @@
                 </li>
                 <li>
                   <span>
-                    <svg width="5" height="7" viewBox="0 0 5 7" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <svg width="6" height="9" viewBox="0 0 5 7" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <path d="M4.40039 3.5L0.35039 0.901924V6.09808L4.40039 3.5Z" fill="#45ADC7"/>
                       </svg>
                   </span>
@@ -132,7 +132,7 @@
                 </li>
                 <li>
                   <span>
-                    <svg width="5" height="7" viewBox="0 0 5 7" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <svg width="6" height="9" viewBox="0 0 5 7" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <path d="M4.40039 3.5L0.35039 0.901924V6.09808L4.40039 3.5Z" fill="#45ADC7"/>
                       </svg>
                   </span>
@@ -140,7 +140,7 @@
                 </li>
                 <li>
                   <span>
-                    <svg width="5" height="7" viewBox="0 0 5 7" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <svg width="6" height="9" viewBox="0 0 5 7" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <path d="M4.40039 3.5L0.35039 0.901924V6.09808L4.40039 3.5Z" fill="#45ADC7"/>
                       </svg>
                   </span>
@@ -155,7 +155,7 @@
               <ul class="list-reset">
                 <li>
                   <span>
-                    <svg width="5" height="7" viewBox="0 0 5 7" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <svg width="6" height="9" viewBox="0 0 5 7" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <path d="M4.40039 3.5L0.35039 0.901924V6.09808L4.40039 3.5Z" fill="#45ADC7"/>
                       </svg>
                   </span>
@@ -163,7 +163,7 @@
                 </li>
                 <li>
                   <span>
-                    <svg width="5" height="7" viewBox="0 0 5 7" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <svg width="6" height="9" viewBox="0 0 5 7" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <path d="M4.40039 3.5L0.35039 0.901924V6.09808L4.40039 3.5Z" fill="#45ADC7"/>
                       </svg>
                   </span>
@@ -171,7 +171,7 @@
                 </li>
                 <li>
                   <span>
-                    <svg width="5" height="7" viewBox="0 0 5 7" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <svg width="6" height="9" viewBox="0 0 5 7" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <path d="M4.40039 3.5L0.35039 0.901924V6.09808L4.40039 3.5Z" fill="#45ADC7"/>
                       </svg>
                   </span>
@@ -179,7 +179,7 @@
                 </li>
                 <li>
                   <span>
-                    <svg width="5" height="7" viewBox="0 0 5 7" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <svg width="6" height="9" viewBox="0 0 5 7" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <path d="M4.40039 3.5L0.35039 0.901924V6.09808L4.40039 3.5Z" fill="#45ADC7"/>
                       </svg>
                   </span>
@@ -187,7 +187,7 @@
                 </li>
                 <li>
                   <span>
-                    <svg width="5" height="7" viewBox="0 0 5 7" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <svg width="6" height="9" viewBox="0 0 5 7" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <path d="M4.40039 3.5L0.35039 0.901924V6.09808L4.40039 3.5Z" fill="#45ADC7"/>
                       </svg>
                   </span>
@@ -195,7 +195,7 @@
                 </li>
                 <li>
                   <span>
-                    <svg width="5" height="7" viewBox="0 0 5 7" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <svg width="6" height="9" viewBox="0 0 5 7" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <path d="M4.40039 3.5L0.35039 0.901924V6.09808L4.40039 3.5Z" fill="#45ADC7"/>
                       </svg>
                   </span>
@@ -259,7 +259,7 @@
                 QP ОС
               </li>
               <li class="qp__right-item">
-                <a class="qp__right-link activity">
+                <a class="qp__right-link active">
                   Операционная система QP ОС
                 </a>
               </li>
