--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -35,6 +35,7 @@
   --text-size-350: 35rem;
   --text-size-120: 12rem;
   --text-size-90: 9rem;
+  --text-size-80: 8rem;
   --text-size-70: 7rem;
   --text-size-60: 6rem;
   --text-size-50: 5rem;
