--- a/src/scss/components/licenses/licenses.scss
+++ b/src/scss/components/licenses/licenses.scss
@@ -11,7 +11,7 @@
     gap: 20px;
     margin-bottom: 24px;
     &-list {
-      max-width: 500px;
+      max-width: 600px;
       width: 100%;
       display: flex;
       flex-wrap: wrap;
@@ -29,7 +29,7 @@
       display: inline-flex;
       align-items: center;
       user-select: none;
-      font-size: 1rem;
+      font-size: 1.4rem;
       line-height: var(--text-height-135);
       font-family: var(--text-sofia-condensed);
       text-transform: uppercase;
@@ -62,8 +62,6 @@
     &-btn {
       @include btn();
       display: inline-block;
-      font-size: var(--text-size-12);
-      line-height: var(--text-height-135);
       padding: 6px 25px;
       color: var(--green);
       &:disabled {
@@ -104,15 +102,16 @@
       border-radius: 4px;
       display: inline-block;
       border: 1px solid var(--blue);
-      padding: 5px 18px;
+      padding: 4px 18px;
       margin-bottom: 10px;
       color: var(--blue);
       text-transform: uppercase;
-      line-height: var(--text-height-135);
+      font-size: var(--text-size-12);
+      font-weight: var(--text-height-100);
     }
 
     &-name {
-      font-size: 2rem;
+      font-size: 2.4rem;
       font-family: var(--text-sofia-condensed);
       font-weight: var(--text-semibold);
       line-height: var(--text-height-135);
@@ -122,14 +121,11 @@
     &-date {
       line-height: var(--text-height-135);
       text-transform: uppercase;
-      font-family: var(--text-sofia-condensed);
-      font-weight: var(--text-semibold);
 
       &-span {
         margin-left: 6px;
         font-size: var(--text-size-12);
         line-height: var(--text-height-135);
-        font-family: var(--text-sofia);
         font-weight: var(--text-regular);
       }
     }
@@ -139,14 +135,18 @@
       align-items: center;
       gap: 10px;
       text-transform: uppercase;
-      font-size: var(--text-size-12);
-      line-height: var(--text-height-135);
+      font-size: var(--text-size-14);
+      line-height: var(--text-height-100);
       font-family: var(--text-sofia-condensed);
       font-weight: var(--text-semibold);
       color: var(--white);
       background-color: var(--green);
       border-radius: 4px;
-      padding: 8.5px 20px;
+      padding: 7px 20px;
+    }
+
+    &-svg {
+
     }
   }
 
@@ -157,8 +157,8 @@
     &-btn {
       text-transform: uppercase;
       font-family: var(--text-sofia-condensed);
-      font-size: var(--text-size-12);
-      line-height: var(--text-height-135);
+      font-size: var(--text-size-14);
+      line-height: var(--text-height-100);
       padding-bottom: 2px;
       border-bottom: 1px solid var(--gray-secondary);
     }
@@ -188,6 +188,16 @@
     }
 
 
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .licenses {
+    &__list {
+      &-name {
+        font-size:var(--text-size-18);
+      }
+    }
   }
 }
 
@@ -233,7 +243,6 @@
       align-items: start;
 
       &-name {
-        font-size: var(--text-size-18);
         width: 84%;
       }
     }
