--- a/src/scss/components/main/facts.scss
+++ b/src/scss/components/main/facts.scss
@@ -9,12 +9,13 @@
     line-height: var(--text-height-130);
     &-link {
       gap: 30px;
+      margin-bottom: 10px;
       &-svg {
         display: flex;
         align-items: center;
         justify-content: center;
-        width: 20px;
-        height: 20px;
+        width: 30px;
+        height: 30px;
         border-radius: 50%;
         border: 1px solid var(--green);
       }
@@ -40,11 +41,11 @@
     gap: 26px;
     align-items: center;
     &-title {
-      margin-bottom: 6px;
+      margin-bottom: 10px;
       max-width: 190px;
       width: 100%;
       text-transform: uppercase;
-      font-size: var(--text-size-20);
+      font-size: var(--text-size-30);
       font-family: var(--text-sofia-condensed);
       line-height: var(--text-height-100);
       font-weight: var(--text-weight-bold);
@@ -75,16 +76,17 @@
 
       h3 {
         color: var(--white);
-        margin-bottom: 8px;
+        margin-bottom: 10px;
         font-family: var(--text-sofia-condensed);
         font-weight: 700;
-        font-size: var(--text-size-70);
-        line-height: var(--text-height-110);
+        font-size: var(--text-size-80);
+        line-height: var(--text-height-100);
+        max-width: none;
       }
 
       p{
         color: var(--white);
-        max-width: 227px;
+        max-width: 250px;
         width: 100%;
       }
     }
@@ -99,7 +101,7 @@
 }
 
 
-@media screen and (max-width: 991px) {
+@media screen and (max-width: 1200px) {
   .facts {
     &__items {
       grid-template-columns: 1fr 1fr;
@@ -151,6 +153,7 @@
         p {
           text-align: center;
           max-width: 217px;
+          font-size: var(--text-size-16);
           font-weight: var(--text-regular);
         }
       }
