--- a/src/scss/mixins/_swiper.scss
+++ b/src/scss/mixins/_swiper.scss
@@ -18,14 +18,19 @@
 }
 
 @mixin btnArray($color, $svgColorHover) {
-  width: 26px;
-  height: 26px;
+  width: 30px;
+  height: 30px;
   border: 1px solid $color;
   display: flex;
   align-items: center;
   justify-content: center;
   background-color: transparent;
   transition: background-color .3s ease-in-out;
+
+  svg {
+    width: 24px;
+    height: 24px;
+  }
 
   &:hover {
     background-color: $color;
