--- a/src/scss/mixins/_swiper.scss
+++ b/src/scss/mixins/_swiper.scss
@@ -20,6 +20,7 @@
 @mixin btnArray($color, $svgColorHover) {
   width: 30px;
   height: 30px;
+  flex-shrink: 0;
   border: 1px solid $color;
   display: flex;
   align-items: center;
